moodify get api based on comment